2-k3s/08.servarr/cleanuparr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr-https
  namespace: servarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cleanuparr.epaflix.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: security-headers
          namespace: traefik-system
        - name: authentik-forwardauth
          namespace: traefik-system
      services:
        - name: cleanuparr
          port: 30263
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr-outpost-https
  namespace: servarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cleanuparr.epaflix.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          namespace: app-authentik
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr-http
  namespace: servarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cleanuparr.epaflix.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - name: cleanuparr
          port: 30263
